refactor(fabric): migrate to unified folder structure (#36821)
* refactor structure folder

* fix ci errors

* fix conflict

--- a/specification/suppressions.yaml
+++ b/specification/suppressions.yaml
@@ -30,7 +30,7 @@
     - devopsinfrastructure/resource-manager/Microsoft.DevOpsInfrastructure/preview/2024-03-26-preview/devopsinfrastructure.json
     - devopsinfrastructure/resource-manager/Microsoft.DevOpsInfrastructure/preview/2024-04-04-preview/devopsinfrastructure.json
     - devopsinfrastructure/resource-manager/Microsoft.DevOpsInfrastructure/stable/2024-10-19/devopsinfrastructure.json
-    - fabric/resource-manager/Microsoft.Fabric/stable/2023-11-01/fabric.json
+    - fabric/resource-manager/Microsoft.Fabric/Fabric/stable/2023-11-01/fabric.json
     - iotoperations/resource-manager/Microsoft.IoTOperations/preview/2024-07-01-preview/iotoperations.json
     - iotoperations/resource-manager/Microsoft.IoTOperations/preview/2024-08-15-preview/iotoperations.json
     - iotoperations/resource-manager/Microsoft.IoTOperations/preview/2024-09-15-preview/iotoperations.json
@@ -546,7 +546,7 @@
   sub-rules:
     - options.@azure-tools/typespec-java.service-name
   paths:
-    - fabric/Microsoft.Fabric.Management/tspconfig.yaml
+    - fabric/resource-manager/Microsoft.Fabric/Fabric/tspconfig.yaml
 
 - tool: TypeSpecValidation
   reason: Suppress until spec can be updated
