--- a/specification/fabric/resource-manager/Microsoft.Fabric/Fabric/tspconfig.yaml
+++ b/specification/fabric/resource-manager/Microsoft.Fabric/Fabric/tspconfig.yaml
@@ -6,12 +6,13 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     use-read-only-status-schema: true
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     azure-resource-provider-folder: "resource-manager"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
     emit-common-types-schema: "never"
     # `arm-resource-flattening` is only used for back-compat for specs existed on July 2024. All new service spec should NOT use this flag
     arm-resource-flattening: true
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/fabric.json"
+    output-file: "{version-status}/{version}/fabric.json"
   "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
