--- a/specification/fileshares/resource-manager/Microsoft.FileShares/FileShares/tspconfig.yaml
+++ b/specification/fileshares/resource-manager/Microsoft.FileShares/FileShares/tspconfig.yaml
@@ -6,9 +6,10 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     use-read-only-status-schema: true
-    emitter-output-dir: "{project-root}/.."
+    emitter-output-dir: "{project-root}"
     azure-resource-provider-folder: "resource-manager"
-    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/fileshares.json"
+    output-file: "{version-status}/{version}/fileshares.json"
+    arm-types-dir: "{project-root}/../../../../common-types/resource-management"
   "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
