--- a/eng/pipelines/spec-gen-sdk.yml
+++ b/eng/pipelines/spec-gen-sdk.yml
@@ -29,6 +29,10 @@ parameters:
     type: boolean
     default: false
     displayName: 'Create SDK pull request'
+  - name: ReleasePlanWorkItemId
+    type: string
+    default: ''
+    displayName: 'Release plan work item id'
 
 trigger: none
 
@@ -43,3 +47,5 @@ extends:
     ApiVersion: ${{ parameters.ApiVersion }}
     SdkReleaseType: ${{ parameters.SdkReleaseType }}
     CreatePullRequest: ${{ parameters.CreatePullRequest }}
+    ReleasePlanWorkItemId: ${{ parameters.ReleasePlanWorkItemId }}
+    Language: $(Language)
