--- a/specification/monitor/resource-manager/Microsoft.Insights/stable/2024-03-11/examples/DataCollectionRulesCreateAgentSettings.json
+++ b/specification/monitor/resource-manager/Microsoft.Insights/stable/2024-03-11/examples/DataCollectionRulesCreateAgentSettings.json
@@ -18,6 +18,10 @@
             {
               "name": "UseTimeReceivedForForwardedEvents",
               "value": "1"
+            },
+            {
+              "name": "Tags",
+              "value": "Azure, Monitoring"
             }
           ]
         }
@@ -44,6 +48,10 @@
               {
                 "name": "UseTimeReceivedForForwardedEvents",
                 "value": "1"
+              },
+              {
+                "name": "Tags",
+                "value": "Azure, Monitoring"
               }
             ]
           },
@@ -79,6 +87,10 @@
               {
                 "name": "UseTimeReceivedForForwardedEvents",
                 "value": "1"
+              },
+              {
+                "name": "Tags",
+                "value": "Azure, Monitoring"
               }
             ]
           },
