--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: Git ref to checkout in azure-openapi-validator repo (eg refs/pull/123/merge)
+        description: aov checkout ref (refs/pull/123/merge)
         required: true
         default: main
         type: string
