--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       ref:
-        description: azure-openapi-validator ref (refs/pull/123/merge)
+        description: ref to test (refs/pull/1/merge)
         required: true
         default: main
         type: string
