--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -32,4 +32,4 @@ jobs:
           path: aov
 
       - name: Verify checkout
-        run: pwd; ls -al
+        run: pwd; find . -maxdepth 2 -type d
