--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -24,7 +24,7 @@ jobs:
           sparse-checkout: |
             .github
 
-      - name: Checkout azure-openapi-validator at ${{ inputs.ref }}
+      - name: Checkout azure-openapi-validator@${{ inputs.ref }}
         uses: actions/checkout@v4
         with:
           repository: Azure/azure-openapi-validator
