--- a/.github/workflows/azure-openapi-validator-test.yaml
+++ b/.github/workflows/azure-openapi-validator-test.yaml
@@ -45,5 +45,5 @@ jobs:
         working-directory: aov
 
       - name: (aov) rush pack
-        run: node common/scripts/install-run-rush.js pack --verbose
+        run: node common/scripts/install-run-rush.js pack
         working-directory: aov
