--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/preview/2021-09-01-privatepreview/managedapplication.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/ServiceFabricManagedClusters/preview/2021-09-01-privatepreview/managedapplication.json
@@ -1431,7 +1431,7 @@
           "description": "AveragePartitionLoadScalingTrigger"
         }
       ],
-      "x-ms-discriminator-value": "AveragePartitionLoad",
+      "x-ms-discriminator-value": "AveragePartitionLoadTrigger",
       "required": [
         "metricName",
         "lowerLoadThreshold",
@@ -1471,7 +1471,7 @@
           "description": "AverageServiceLoadScalingTrigger"
         }
       ],
-      "x-ms-discriminator-value": "AverageServiceLoad",
+      "x-ms-discriminator-value": "AverageServiceLoadTrigger",
       "required": [
         "metricName",
         "lowerLoadThreshold",
