--- a/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-06-01/configurationmanager.json
+++ b/specification/edge/resource-manager/Microsoft.Edge/configurationmanager/stable/2025-06-01/configurationmanager.json
@@ -7603,7 +7603,7 @@
     },
     "Capability": {
       "type": "object",
-      "description": "Capability, to match in Solution Templates & Targets",
+      "description": "Capability, to match in Solution Templates and Targets",
       "properties": {
         "name": {
           "type": "string",
