--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2025-05-01-preview/examples/ApplicationGroup/ApplicationGroupCreate.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2025-05-01-preview/examples/ApplicationGroup/ApplicationGroupCreate.json
@@ -1,69 +1,71 @@
 {
   "parameters": {
-    "namespaceName": "contoso-ua-test-eh-system-1",
-    "resourceGroupName": "contosotest",
     "api-version": "2025-05-01-preview",
-    "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "applicationGroupName": "appGroup1",
+    "namespaceName": "contoso-ua-test-eh-system-1",
     "parameters": {
       "properties": {
         "clientAppGroupIdentifier": "SASKeyName=KeyName",
+        "isEnabled": true,
         "policies": [
           {
-            "type": "ThrottlingPolicy",
             "name": "ThrottlingPolicy1",
+            "type": "ThrottlingPolicy",
             "metricId": "IncomingMessages",
             "rateLimitThreshold": 7912
           },
           {
-            "type": "ThrottlingPolicy",
             "name": "ThrottlingPolicy2",
+            "type": "ThrottlingPolicy",
             "metricId": "IncomingBytes",
             "rateLimitThreshold": 3951729
           },
           {
-            "type": "ThrottlingPolicy",
             "name": "ThrottlingPolicy3",
+            "type": "ThrottlingPolicy",
             "metricId": "OutgoingBytes",
             "rateLimitThreshold": 245175
           }
-        ],
-        "isEnabled": true
+        ]
       }
-    }
+    },
+    "resourceGroupName": "contosotest",
+    "subscriptionId": "00000000-0000-0000-0000-000000000000"
   },
   "responses": {
     "200": {
       "body": {
-        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup1",
         "name": "appGroup1",
         "type": "Microsoft.EventHub/Namespaces/ApplicationGroups",
+        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup1",
         "location": "EAST US 2 EUAP",
         "properties": {
           "clientAppGroupIdentifier": "SASKeyName=KeyName",
+          "isEnabled": true,
           "policies": [
             {
-              "type": "ThrottlingPolicy",
               "name": "ThrottlingPolicy1",
+              "type": "ThrottlingPolicy",
               "metricId": "IncomingMessages",
               "rateLimitThreshold": 7912
             },
             {
-              "type": "ThrottlingPolicy",
               "name": "ThrottlingPolicy2",
+              "type": "ThrottlingPolicy",
               "metricId": "IncomingBytes",
               "rateLimitThreshold": 3951729
             },
             {
-              "type": "ThrottlingPolicy",
               "name": "ThrottlingPolicy3",
+              "type": "ThrottlingPolicy",
               "metricId": "OutgoingBytes",
               "rateLimitThreshold": 245175
             }
-          ],
-          "isEnabled": true
+          ]
         }
       }
     }
-  }
+  },
+  "operationId": "ApplicationGroup_CreateOrUpdateApplicationGroup",
+  "title": "ApplicationGroupCreate"
 }
