--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2025-05-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2025-05-01-preview/examples/ApplicationGroup/ApplicationGroupListByNamespace.json
@@ -1,8 +1,8 @@
 {
   "parameters": {
+    "api-version": "2025-05-01-preview",
     "namespaceName": "contoso-ua-test-eh-system-1",
     "resourceGroupName": "contosotest",
-    "api-version": "2025-05-01-preview",
     "subscriptionId": "00000000-0000-0000-0000-000000000000"
   },
   "responses": {
@@ -10,67 +10,69 @@
       "body": {
         "value": [
           {
-            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup1",
             "name": "appGroup1",
             "type": "Microsoft.EventHub/Namespaces/ApplicationGroups",
+            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup1",
             "location": "EAST US 2 EUAP",
             "properties": {
               "clientAppGroupIdentifier": "SASKeyName=KeyName",
+              "isEnabled": true,
               "policies": [
                 {
-                  "type": "ThrottlingPolicy",
                   "name": "ThrottlingPolicy1",
+                  "type": "ThrottlingPolicy",
                   "metricId": "IncomingMessages",
                   "rateLimitThreshold": 7912
                 },
                 {
-                  "type": "ThrottlingPolicy",
                   "name": "ThrottlingPolicy2",
+                  "type": "ThrottlingPolicy",
                   "metricId": "IncomingBytes",
                   "rateLimitThreshold": 3951729
                 },
                 {
-                  "type": "ThrottlingPolicy",
                   "name": "ThrottlingPolicy3",
+                  "type": "ThrottlingPolicy",
                   "metricId": "OutgoingBytes",
                   "rateLimitThreshold": 245175
                 }
-              ],
-              "isEnabled": true
+              ]
             }
           },
           {
-            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup2",
             "name": "appGroup2",
             "type": "Microsoft.EventHub/Namespaces/ApplicationGroups",
+            "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/contosotest/providers/Microsoft.EventHub/namespaces/contoso-ua-test-eh-system-1/applicationgroups/appGroup2",
             "location": "EAST US 2 EUAP",
             "properties": {
               "clientAppGroupIdentifier": "AADAppID=Guid",
+              "isEnabled": false,
               "policies": [
                 {
-                  "type": "ThrottlingPolicy",
                   "name": "ThrottlingPolicy1",
+                  "type": "ThrottlingPolicy",
                   "metricId": "IncomingMessages",
                   "rateLimitThreshold": 9984
                 },
                 {
-                  "type": "ThrottlingPolicy",
                   "name": "ThrottlingPolicy2",
+                  "type": "ThrottlingPolicy",
                   "metricId": "IncomingBytes",
                   "rateLimitThreshold": 7823412
                 },
                 {
-                  "type": "ThrottlingPolicy",
                   "name": "ThrottlingPolicy3",
+                  "type": "ThrottlingPolicy",
                   "metricId": "OutgoingBytes",
                   "rateLimitThreshold": 331665
                 }
-              ],
-              "isEnabled": false
+              ]
             }
           }
         ]
       }
     }
-  }
+  },
+  "operationId": "ApplicationGroup_ListByNamespace",
+  "title": "ListApplicationGroups"
 }
