--- a/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2025-05-01-preview/examples/NameSpaces/NetworkSecurityPerimeterConfigurationReconcile.json
+++ b/specification/eventhub/resource-manager/Microsoft.EventHub/preview/2025-05-01-preview/examples/NameSpaces/NetworkSecurityPerimeterConfigurationReconcile.json
@@ -1,9 +1,9 @@
 {
   "parameters": {
-    "resourceAssociationName": "resourceAssociation1",
-    "namespaceName": "sdk-Namespace-5828",
-    "resourceGroupName": "SDK-EventHub-4794",
     "api-version": "2025-05-01-preview",
+    "namespaceName": "sdk-Namespace-5828",
+    "resourceAssociationName": "resourceAssociation1",
+    "resourceGroupName": "SDK-EventHub-4794",
     "subscriptionId": "subID"
   },
   "responses": {
@@ -17,5 +17,7 @@
         "azure-asyncoperation": "http://azure.async.operation/status"
       }
     }
-  }
+  },
+  "operationId": "NetworkSecurityPerimeterConfigurations_CreateOrUpdate",
+  "title": "NetworkSecurityPerimeterConfigurationList"
 }
