Update releaseplan work item as int param

--- a/eng/pipelines/spec-gen-sdk.yml
+++ b/eng/pipelines/spec-gen-sdk.yml
@@ -30,8 +30,8 @@ parameters:
     default: false
     displayName: 'Create SDK pull request'
   - name: ReleasePlanWorkItemId
-    type: string
-    default: ''
+    type: int
+    default: 0
     displayName: 'Release plan work item id'
 
 trigger: none
