--- a/eng/pipelines/spec-gen-sdk.yml
+++ b/eng/pipelines/spec-gen-sdk.yml
@@ -30,7 +30,7 @@ parameters:
     default: false
     displayName: 'Create SDK pull request'
   - name: ReleasePlanWorkItemId
-    type: integer
+    type: number
     default: 0
     displayName: 'Release plan work item id'
 
