--- a/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
+++ b/eng/pipelines/templates/stages/archetype-spec-gen-sdk.yml
@@ -29,7 +29,7 @@ parameters:
     type: string
     default: ''
   - name: ReleasePlanWorkItemId
-    type: integer
+    type: number
     default: 0
   - name: Language
     type: string
