Updated service-dir in SDK configurations

--- a/specification/edge/Microsoft.Edge.DisconnectedOperations.Management/tspconfig.yaml
+++ b/specification/edge/Microsoft.Edge.DisconnectedOperations.Management/tspconfig.yaml
@@ -54,4 +54,4 @@ linter:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
 parameters:
   service-dir:
-    default: sdk/placeholder #!!!IMPORTANT!!! To ensure the emitter correctly produces SDK, this configuration is added by Azure SDK Team. Some configurations use placeholder values. For modifications, please refer to https://aka.ms/azsdk/specs/typespec-validation#sdktspconfigvalidation
+    default: sdk/disconnectedoperations #!!!IMPORTANT!!! To ensure the emitter correctly produces SDK, this configuration is added by Azure SDK Team. Some configurations use placeholder values. For modifications, please refer to https://aka.ms/azsdk/specs/typespec-validation#sdktspconfigvalidation
